--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Decision Cards — All-in-One（零後端）</title>
+  <title>Decision Cards — What Are You Reading Today?</title>
   <style>
     :root{
       --bg:#0b0f14;--panel:#141b2d;--text:#e8eef7;--muted:#a9b6c7;
