--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Decision Cards — What Are You Reading Today?</title>
   <style>
+    .langToggle{
+  position:fixed;
+  top:16px;
+  right:16px;
+  background:#1a1c22;
+  border:1px solid #333;
+  border-radius:999px;
+  padding:6px;
+  display:flex;
+  gap:6px;
+  z-index:999;
+}
+.langToggle a{
+  text-decoration:none;
+  color:#eaeaf0;
+  padding:6px 10px;
+  border-radius:999px;
+  font-size:13px;
+}
+.langToggle a.active{
+  background:#333;
+}
     :root{
       --bg:#0b0f14;--panel:#141b2d;--text:#e8eef7;--muted:#a9b6c7;
       --accent:#7aa2ff;--bad:#ff6b6b;--good:#4dffb0;--radius:16px;--shadow:0 12px 30px rgba(0,0,0,.35);
       --border:rgba(255,255,255,.10);
     }
     *{box-sizing:border-box}
+        
     body{
       margin:0; min-height:100vh;
       font-family:ui-sans-serif,system-ui,-apple-system,"PingFang TC","Noto Sans TC",Segoe UI,Roboto,Helvetica,Arial;
@@ -127,6 +150,12 @@
   </style>
 </head>
 <body>
+<div class="langToggle">
+  <a href="index.html" class="active">中文</a>
+  <a href="index-en.html">EN</a>
+</div>
+  
+  
 <header>
   <h1>Decision Cards（All‑in‑One・零後端）</h1>
   <p class="sub">
